--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,5 +21,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "devDependencies": {
+    "vite": "^7.2.2"
   }
 }
